# eduACDC

./: README.md  pyproject.toml
eduacdc/: README.md  __init__.py
eduacdc/analysis/: __init__.py  fluxes.py  rates_and_deltags.py  visualization.py
eduacdc/core/: __init__.py  cluster_properties.py  clusters.py  coagulation_loss.py  equations.py  molecules.py  process_coefficients.py  system.py  wall_loss.py
eduacdc/io/: __init__.py  parser.py
eduacdc/simulation/: __init__.py  results.py  solver.py
eduacdc/utils/: __init__.py  constants.py
examples/: ADW.yaml  ANW.yaml  AN_neutral_neg_pos.yaml  README.md  run_simulation.py  three_component_system.yaml
